--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nexdev.enyason.jan">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,17 +11,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LandingActivity">
+        <activity
+            android:name=".LandingActivity"
+            android:exported="true" />
+        <activity android:name=".SignUpActivity" />
+        <activity
+            android:name=".SetUpProfileActivity"
+            android:exported="true" />
+        <activity
+            android:name=".SignInActivity"
+            android:exported="true" />
+        <activity
+            android:name=".HomeActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignUpActivity" />
-        <activity android:name=".SetUpProfileActivity" android:exported="true"/>
-        <activity android:name=".SignInActivity" android:exported="true"/>
-        <activity android:name=".HomeActivity" android:exported="true"></activity>
+        <activity android:name=".CourseDetailActivity" android:exported="true" />
+        <activity android:name=".LearnActivity" android:exported="true"/>
+        <activity android:name=".ClassContentActivity" />
+        <activity android:name=".MentorActivity"></activity>
     </application>
 
 </manifest>
